# $Id$

Griffith ChangeLog
------------------
(c) 2005-2008  Vasco Nunes, Piotr Ożarowski


2008-09-23  Michael Jahn
	* [#273172] "Properties/Volume/show...in this volume" is broken

2008-09-14  Piotr Ożarowski
	* Warn about backups when starting develpement version
	* seen/loaned settings available in adv. filter window (much more to come soon)

2008-09-13  Piotr Ożarowski
	* Loaning movies is working again

2008-09-12  Piotr Ożarowski
	* Validate loan contact's email address
	* Python required version bumped to 2.4 (it was required for a while aready)
	* Use SQLAlchemy's validate decorator (minimum required SA version bumped to 0.5rc1)

2008-09-09  Piotr Ożarowski
	* Add aspect ratio, cameraman and screenplay to the database

2008-08-16  Michael Jahn
	* fixed support for german umlauts in OFDb plugin
	* added Amazon plugin (supports search by UPC/EAN)
	* added Amazon language support for CA and FR
	* Amazon support is now closer to the current specification
	* encoding error in plugins Kino.de and Zelluloid

2008-08-14  Michael Jahn
	* pdf export: group movies with numbers 0-9 (thanks to Luigi Pantano)
	* pdf export: [#174463] Database Export as PDF doesn't work under Ubuntu

2008-08-12  Piotr Ożarowski
	* Don't refresh movie list while updating quick filter combos
	* FDb movie plugin updated (thanks to Bartosz Kurczewski)

2008-08-03  Piotr Ożarowski
	* Initial advanced search/filter function implemented (alpha stage)

2008-08-02  Piotr Ożarowski
	* Use unicode in gettext and SQLAlchemy
	* Move all posters to database, create local cache

2008-07-31  Piotr Ożarowski
	* Replace gdebug with Python's logging module
	* Add posters table (to store posters in database)

2008-07-30  Michael Jahn
	* [#253272] extra information columns not loaded on startup
	* extended debug support on windows platforms

2008-07-28  Piotr Ożarowski
	* Switch back to 4 spaces indentation