@@ -5,6 +5,9 @@ Griffith ChangeLog
 (c) 2005-2008  Vasco Nunes, Piotr Ożarowski
 
 
+2008-10-18  Piotr Ożarowski
+	* Speed up import movies function
+
 2008-09-23  Michael Jahn
 	* [#273172] "Properties/Volume/show...in this volume" is broken
 
